[package]
name = "test11"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
screen-13 = {git = "https://github.com/attackgoat/screen-13.git"}
screen-13-imgui = {git = "https://github.com/attackgoat/screen-13.git"}
archery = "*"
inline-spirv = "*"
pretty_env_logger = "0.4"
